# mendicant

./: .gitignore  CLAUDE.md  Caddyfile  Cargo.toml  Dockerfile.auth-lambda  README.md  docker-compose.yml
.claude/: settings.json  settings.local.json
.claude/projects/-Users-steve-workspace-mendicant/memory/: MEMORY.md  project_progress.md
.github/workflows/: build.yml
crates/: CLAUDE.md
crates/admin-lambda/: Cargo.toml  Dockerfile
crates/admin-lambda/src/: mailer.rs  main.rs  middleware.rs  state.rs
crates/admin-lambda/src/handlers/: dashboard.rs  mod.rs  tables.rs  users.rs  util.rs
crates/admin-lambda/templates/: admin-sidenav.html  admin-user-detail.html  admin-users.html
crates/auth-lambda/: CLAUDE.md  Cargo.toml  Dockerfile  build.rs
crates/auth-lambda/src/: error.rs  jwt.rs  mailer.rs  main.rs  middleware.rs  signing.rs  sse.rs  state.rs
crates/auth-lambda/src/handlers/: admin.rs  auth.rs  credentials.rs  enroll.rs  mod.rs  oauth.rs  pages.rs  static_files.rs  well_known.rs
crates/auth-lambda/static/: datastar.js  passkey-plugin.js  theme.css
crates/auth-lambda/templates/: activate.html  admin-enroll.html  admin-table.html  admin-user-detail.html  admin-users.html  admin.html  base.html  landing.html  login.html  profile.html  recover.html  register-confirm.html  register.html
crates/bootstrap/: Cargo.toml
crates/bootstrap/src/: main.rs
crates/db/: Cargo.toml
crates/db/src/: attr.rs  challenges.rs  client.rs  credentials.rs  email_tokens.rs  error.rs  lib.rs  oauth_devices.rs  refresh_tokens.rs  time_util.rs  users.rs
crates/db/tests/: challenges.rs  credentials.rs  email_tokens.rs  oauth_devices.rs  refresh_tokens.rs  users.rs
crates/db/tests/common/: mod.rs
crates/domain/: Cargo.toml
crates/domain/src/: challenge.rs  credential.rs  email_token.rs  error.rs  lib.rs  oauth.rs  token.rs  user.rs
crates/user-lambda/: Cargo.toml  Dockerfile
crates/user-lambda/src/: error.rs  jwt.rs  main.rs  middleware.rs  sse.rs  state.rs
crates/user-lambda/src/handlers/: admin.rs  credentials.rs  mod.rs  passkey.rs  profile.rs  sessions.rs
crates/user-lambda/templates/: base.html  profile.html
crates/users-lambda/: Cargo.toml  Dockerfile
crates/users-lambda/src/: error.rs  main.rs  state.rs
crates/users-lambda/src/handlers/: admin.rs  mod.rs  profile.rs
docs/: future-work.md  github-oidc-setup.md  local-dev.md  progress.md
infrastructure/: CLAUDE.md
infrastructure/app/: main.tf  outputs.tf  variables.tf
infrastructure/app/modules/regional-app/: hotfix.tf  lambda.tf  main.tf  outputs.tf  variables.tf
infrastructure/ci/: .terraform.tfstate.lock.info  ecr.tf  main.tf  outputs.tf
infrastructure/environments/dev/: main.tf  outputs.tf
infrastructure/environments/prod/: .envrc  main.tf  variables.tf
infrastructure/infra/: imports.tf  main.tf  outputs.tf  postmark.tf  ses.tf
infrastructure/infra/modules/regional/: api.tf  database.tf  ecr.tf  iam.tf  outputs.tf  signing_key.tf  variables.tf
infrastructure/modules/global/: database.tf  dns_cdn.tf  outputs.tf  signing_key.tf  variables.tf
infrastructure/modules/regional/: api.tf  database.tf  outputs.tf  signing_key.tf  variables.tf
scripts/: cleanup-dynamodb-local.sh  dev-deploy.sh  hotfix-swap.sh  setup-dynamodb-local.sh
tools/local-apigw/: Cargo.toml  Dockerfile
tools/local-apigw/src/: main.rs
