[workspace]
members = [
    "crates/domain",
    "crates/db",
    "crates/auth-lambda",
    "crates/users-lambda",
]
resolver = "2"

[workspace.dependencies]
# serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# async runtime
tokio = { version = "1", features = ["full"] }

# error handling
thiserror = "2"
anyhow = "1"

# observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# ids and time
uuid = { version = "1", features = ["v4", "serde"] }
time = { version = "0.3", features = ["serde"] }

# aws
aws-config = "1"
aws-sdk-dynamodb = "1"
aws-sdk-kms = "1"
base64 = "0.22"

# lambda + http
lambda_http = "0.13"
axum = "0.8"

# auth
webauthn-rs = { version = "0.5", features = ["danger-allow-state-serialisation"] }
jsonwebtoken = "9"
rsa = { version = "0.9", features = ["pem", "pkcs8"] }

# templating
askama = "0.12"

# internal crates
domain = { path = "crates/domain" }
db = { path = "crates/db" }
