[workspace]
members = [
    "crates/domain",
    "crates/db",
    "crates/auth-lambda",
    "crates/users-lambda",
    "crates/bootstrap",
]
resolver = "2"

[workspace.dependencies]
# serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# async runtime
tokio = { version = "1", features = ["full"] }

# error handling
thiserror = "2"
anyhow = "1"

# observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# ids and time
uuid = { version = "1", features = ["v4", "serde"] }
time = { version = "0.3", features = ["serde", "formatting", "parsing"] }

# aws
aws-config = "1"
aws-sdk-dynamodb = "1"
aws-sdk-kms = "1"
aws-sdk-sesv2 = "1"
base64 = "0.22"

# lambda + http
lambda_http = "0.13"
axum = "0.8"

# auth
webauthn-rs = { version = "0.5", features = ["danger-allow-state-serialisation"] }
jsonwebtoken = "9"
rsa = { version = "0.9", features = ["pem"] }

# templating
askama = "0.12"

# cli
clap = { version = "4", features = ["derive", "env"] }

# vendored openssl — compiles openssl from source so the build doesn't depend
# on system openssl headers (required for cargo-lambda / Zig cross-compilation)
openssl = { version = "0.10", features = ["vendored"] }

# internal crates
domain = { path = "crates/domain" }
db = { path = "crates/db" }
