[package]
name = "db"
version = "0.1.0"
edition = "2024"

[dependencies]
domain = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
time = { workspace = true }
aws-config = { workspace = true }
aws-sdk-dynamodb = { workspace = true }
base64 = { workspace = true }
