[package]
name = "users-lambda"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "users-lambda"
path = "src/main.rs"

[dependencies]
domain = { workspace = true }
db = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
time = { workspace = true }
aws-config = { workspace = true }
aws-sdk-dynamodb = { workspace = true }
aws-sdk-kms = { workspace = true }
lambda_http = { workspace = true }
axum = { workspace = true }
jsonwebtoken = { workspace = true }
rsa = { workspace = true }
base64 = { workspace = true }
askama = { workspace = true }
